# vika-bot

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.example  pyproject.toml
.cursor/: rules
notebooks/: 00_TEMPLATE.ipynb  COVER_LETER_AGENT.ipynb  COVER_LETTER.ipynb  TEXT_FORMATTER.ipynb
notebooks/assets/: CV.md  README.md
notebooks/assets/24.09.2025/: DOCKER_SETUP_GUIDE_FOR_PYTHON.md  EXAMPLE_FORMATTED_DOCUMENT.md  SERVICE_ACCOUNT_KEY_ISSUE_RESOLUTION.md
prompts/: INIT.md  TASK.md
