[project]
name = "vika-bot"
version = "0.1.0"
description = "LLM Prompt Debugging Environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tokencost>=0.1.26",
    "openai-agents>=0.2.6",
    "streamlit>=1.48.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.280",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]
